added role and aria-label attributes to div containing the hero class

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -24,7 +25,9 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
+
+    <div class="hero" role="img" aria-label="Image of digital marketing meeting"></div>
+
     <main>
         <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Search engine optimization image" />
@@ -48,6 +51,7 @@
             </p>
         </section>
     </main>
+
     <aside>
         <section>
             <h3>Lead Generation</h3>
@@ -71,6 +75,7 @@
             </p>
         </section>
     </aside>
+
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
